Update version, add environment variables, and refine form controls layout. Incorporate database systems to enhance IT inventory platform. (Issue #123)

--- a/src/app/components/models/edit-model/edit-model.component.html
+++ b/src/app/components/models/edit-model/edit-model.component.html
@@ -7,31 +7,39 @@
           <label for="form-id" class="form-label">Id</label>
           <input
             type="text"
+            readonly
             formControlName="id"
             id="form-id"
             class="form-control mb-2"
             [maxLength]="36"
             [ngClass]="{
-              'is-invalid': editModelForm.controls.id.invalid && editModelForm.controls.id.touched,
-              'is-valid': editModelForm.controls.id.valid && editModelForm.controls.id.touched,
-            }"
-          />
+              'is-invalid': editModelForm.get('id')?.status !== 'VALID',
+              'is-valid': editModelForm.get('id')?.status === 'VALID',
+            }" />
           <div *ngIf="editModelForm.get('id')?.errors" class="invalid-feedback">
             <div *ngIf="editModelForm.controls.id?.errors?.required || editModelForm.controls.id?.errors?.minlength">
               Id is required and must be at least 4 characters
             </div>
           </div>
         </div>
+      </div>
+      <div class="col">
         <div class="form-group mb-3">
           <label for="name" class="form-label">Name</label>
           <input
             minlength="4"
+            id="name"
+            type="text"
+            placeholder="Model's name"
+            aria-label="name"
+            [formControlName]="'name'"
+            required
             maxlength="255"
             class="form-control"
             [ngClass]="{
-              'is-valid': editModelForm.controls.name.valid && editModelForm.controls.name.touched,
-            }"
-          />
+              'is-invalid': editModelForm.get('name')?.status !== 'VALID',
+              'is-valid': editModelForm.get('name')?.status === 'VALID',
+            }" />
           <div *ngIf="editModelForm.get('name')?.errors" class="invalid-feedback">
             <div *ngIf="editModelForm.controls.name.errors?.required || editModelForm.controls.name.errors?.minlength">
               Name is required and must be at least 4 characters
@@ -39,204 +47,201 @@
           </div>
         </div>
       </div>
-      <div class="row" formGroupName="dimension">
+    </div>
+    <div class="row" formGroupName="dimension">
+      <div class="col">
         <div class="form-group mb-3">
           <label for="width" class="form-label">Width</label>
           <input
             class="form-control"
-            type="text"
+            type="number"
             formControlName="width"
             id="width"
             minlength="1"
             maxlength="6"
             required
             [ngClass]="{
-              'is-invalid':
-                !editModelForm.get('dimension.width')?.valid && editModelForm.get('dimension.width')?.touched,
-              'is-valid': editModelForm.get('dimension.width')?.valid && editModelForm.get('dimension.width')?.touched,
-            }"
-          />
+              'is-invalid': editModelForm.get('dimension.width')?.status !== 'VALID',
+              'is-valid': editModelForm.get('dimension.width')?.status === 'VALID',
+            }" />
           <div *ngIf="editModelForm.get('dimension.width')?.errors" class="invalid-feedback"></div>
           <div>Width is required and must be at least 1 number</div>
           <div *ngIf="editModelForm.get('dimension.width')?.errors?.maxlength">Width must be less than 6 numbers</div>
         </div>
       </div>
-    </div>
-    <div class="form-group mb-3">
-      <label for="height" class="form-label">Height</label>
-      <input
-        class="form-control"
-        type="text"
-        formControlName="height"
-        id="height"
-        minlength="1"
-        maxlength="6"
-        required
-        [ngClass]="{
-          'is-invalid': !editModelForm.get('dimension.height')?.valid && editModelForm.get('dimension.height')?.touched,
-          'is-valid': editModelForm.get('dimension.height')?.valid && editModelForm.get('dimension.height')?.touched,
-        }"
-      />
-      <div *ngIf="editModelForm?.get('dimension.height')?.errors" class="invalid-feedback">
-        <div
-          *ngIf="
-            editModelForm?.get('dimension.height')?.errors?.required ||
-            editModelForm?.get('dimension.height')?.errors?.minlength
-          "
-        >
-          Height is required and must be at least 1 number
+      <div class="col">
+        <div class="form-group mb-3">
+          <label for="height" class="form-label">Height</label>
+          <input
+            class="form-control"
+            type="number"
+            formControlName="height"
+            id="height"
+            minlength="1"
+            maxlength="6"
+            required
+            [ngClass]="{
+              'is-invalid': editModelForm.get('dimension.height')?.status !== 'VALID',
+              'is-valid': editModelForm.get('dimension.height')?.status === 'VALID',
+            }" />
+          <div *ngIf="editModelForm?.get('dimension.height')?.errors" class="invalid-feedback">
+            <div
+              *ngIf="
+                editModelForm?.get('dimension.height')?.errors?.required ||
+                editModelForm?.get('dimension.height')?.errors?.minlength
+              ">
+              Height is required and must be at least 1 number
+            </div>
+            <div *ngIf="editModelForm?.get('dimension.height')?.errors?.maxlength">
+              Height must be less than 6 numbers
+            </div>
+          </div>
         </div>
-        <div *ngIf="editModelForm?.get('dimension.height')?.errors?.maxlength">Height must be less than 6 numbers</div>
       </div>
-    </div>
-    <div class="form-group mb-3">
-      <label for="depth" class="form-label">Depth</label>
-      <input
-        class="form-control"
-        type="text"
-        formControlName="depth"
-        id="depth"
-        minlength="1"
-        maxlength="4"
-        required
-        [ngClass]="{
-          'is-invalid': !editModelForm.get('dimension.depth')?.valid && editModelForm.get('dimension.depth')?.touched,
-          'is-valid': editModelForm.get('dimension.depth')?.valid && editModelForm.get('dimension.depth')?.touched,
-        }"
-      />
-      <div *ngIf="editModelForm.get('dimension.depth')?.errors" class="invalid-feedback">
-        <div
-          *ngIf="
-            editModelForm.get('dimension.depth')?.errors?.required ||
-            editModelForm.get('dimension.depth')?.errors?.minlength
-          "
-        >
-          Depth is required and must be at least 1 number
+      <div class="col">
+        <div class="form-group mb-3">
+          <label for="depth" class="form-label">Depth</label>
+          <input
+            class="form-control"
+            type="number"
+            formControlName="depth"
+            id="depth"
+            minlength="1"
+            maxlength="4"
+            required
+            [ngClass]="{
+              'is-invalid': editModelForm.get('dimension.depth')?.status !== 'VALID',
+              'is-valid': editModelForm.get('dimension.depth')?.status === 'VALID',
+            }" />
+
+          <div *ngIf="editModelForm.get('dimension.depth')?.errors" class="invalid-feedback">
+            <div
+              *ngIf="
+                editModelForm.get('dimension.depth')?.errors?.required ||
+                editModelForm.get('dimension.depth')?.errors?.minlength
+              ">
+              Depth is required and must be at least 1 number
+            </div>
+            <div *ngIf="editModelForm.get('dimension.depth')?.errors?.maxlength">Depth must be less than 4 numbers</div>
+          </div>
         </div>
-        <div *ngIf="editModelForm.get('dimension.depth')?.errors?.maxlength">Depth must be less than 4 numbers</div>
       </div>
     </div>
     <div class="row" formGroupName="texture">
       <div class="col">
-        <div class="form-group mb-3"></div>
-        <label for="front" class="form-label">Front</label>
-        <input
-          class="form-control"
-          type="text"
-          formControlName="front"
-          id="front"
-          [ngClass]="{
-            'is-invalid': !editModelForm.get('texture.front')?.valid && editModelForm.get('texture.front')?.touched,
-            'is-valid': editModelForm.get('texture.front')?.valid && editModelForm.get('texture.front')?.touched,
-          }"
-        />
-        <div *ngIf="editModelForm.get('texture.front')?.errors" class="invalid-feedback"></div>
-        <div
-          *ngIf="
-            editModelForm.get('texture.front')?.errors?.required ||
-            editModelForm.get('texture.front')?.errors?.minlength
-          "
-        >
-          Front is required and must be at least 1 number
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="form-group mb-3">
-        <label for="back" class="form-label">Back</label>
-        <input
-          class="form-control"
-          type="text"
-          formControlName="back"
-          id="back"
-          [ngClass]="{
-            'is-invalid': !editModelForm.get('texture.back')?.valid && editModelForm.get('texture.back')?.touched,
-            'is-valid': editModelForm.get('texture.back')?.valid && editModelForm.get('texture.back')?.touched,
-          }"
-        />
-        <div *ngIf="editModelForm.get('texture.back')?.errors" class="invalid-feedback">
-          <div *ngIf="editModelForm.get('texture.back')?.errors?.minlength">
-            Back side is required and must be at least 1 number
+        <div class="form-group mb-2">
+          <label for="front" class="form-label">Front</label>
+          <input
+            class="form-control"
+            type="text"
+            formControlName="front"
+            id="front"
+            [ngClass]="{
+              'is-invalid': editModelForm.get('texture.front')?.status !== 'VALID',
+              'is-valid': editModelForm.get('texture.front')?.status === 'VALID',
+            }" />
+          <div *ngIf="editModelForm.get('texture.front')?.errors" class="invalid-feedback"></div>
+          <div
+            *ngIf="
+              editModelForm.get('texture.front')?.errors?.required ||
+              editModelForm.get('texture.front')?.errors?.minlength
+            ">
+            Front is required and must be at least 1 number
           </div>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="form-group mb-3">
-        <label for="side" class="form-label">Side</label>
-        <input
-          class="form-control"
-          type="text"
-          formControlName="side"
-          id="side"
-          [ngClass]="{
-            'is-invalid': !editModelForm.get('texture.side')?.valid && editModelForm.get('texture.side')?.touched,
-            'is-valid': editModelForm.get('texture.side')?.valid && editModelForm.get('texture.side')?.touched,
-          }"
-        />
-        <div *ngIf="editModelForm.get('texture.side')?.errors" class="invalid-feedback">
-          <div
-            *ngIf="
-              editModelForm.get('texture.side')?.errors?.required ||
-              editModelForm.get('texture.side')?.errors?.minlength
-            "
-          >
-            Side is required and must be at least 1 number
+      <div class="col">
+        <div class="form-group mb-2">
+          <label for="back" class="form-label">Back</label>
+          <input
+            class="form-control"
+            type="text"
+            formControlName="back"
+            id="back"
+            [ngClass]="{
+              'is-invalid': editModelForm.get('texture.back')?.status !== 'VALID',
+              'is-valid': editModelForm.get('texture.back')?.status === 'VALID',
+            }" />
+          <div *ngIf="editModelForm.get('texture.back')?.errors" class="invalid-feedback">
+            <div *ngIf="editModelForm.get('texture.back')?.errors?.minlength">
+              Back side is required and must be at least 1 number
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="form-group mb-3">
-        <label for="top" class="form-label">Top</label>
-        <input
-          class="form-control"
-          type="text"
-          formControlName="top"
-          id="top"
-          [ngClass]="{
-            'is-invalid': !editModelForm.get('texture.top')?.valid && editModelForm.get('texture.top')?.touched,
-            'is-valid': editModelForm.get('texture.top')?.valid && editModelForm.get('texture.top')?.touched,
-          }"
-        />
-        <div *ngIf="editModelForm.get('texture.top')?.errors" class="invalid-feedback">
-          <div
-            *ngIf="
-              editModelForm.get('texture.top')?.errors?.required || editModelForm.get('texture.top')?.errors?.minlength
-            "
-          >
-            Top is required and must be at least 1 number
+      <div class="col">
+        <div class="form-group mb-2">
+          <label for="side" class="form-label">Side</label>
+          <input
+            class="form-control"
+            type="text"
+            formControlName="side"
+            id="side"
+            [ngClass]="{
+              'is-invalid': editModelForm.get('texture.side')?.status !== 'VALID',
+              'is-valid': editModelForm.get('texture.side')?.status === 'VALID',
+            }" />
+          <div *ngIf="editModelForm.get('texture.side')?.errors" class="invalid-feedback">
+            <div
+              *ngIf="
+                editModelForm.get('texture.side')?.errors?.required ||
+                editModelForm.get('texture.side')?.errors?.minlength
+              ">
+              Side is required and must be at least 1 number
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="form-group mb-3">
-        <label for="bottom" class="form-label">Bottom</label>
-        <input
-          class="form-control"
-          type="text"
-          formControlName="bottom"
-          id="bottom"
-          [ngClass]="{
-            'form-control': true,
-          }"
-        />
-        <div *ngIf="editModelForm.get('texture.bottom')?.errors" class="invalid-feedback">
-          <div
-            *ngIf="
-              editModelForm.get('texture.bottom')?.errors?.required ||
-              editModelForm.get('texture.bottom')?.errors?.minlength
-            "
-          >
-            Bottom is required and must be at least 2 characters
+      <div class="col">
+        <div class="form-group mb-2">
+          <label for="top" class="form-label">Top</label>
+          <input
+            class="form-control"
+            type="text"
+            formControlName="top"
+            id="top"
+            [ngClass]="{
+              'is-invalid': editModelForm.get('texture.top')?.status !== 'VALID',
+              'is-valid': editModelForm.get('texture.top')?.status === 'VALID',
+            }" />
+          <div *ngIf="editModelForm.get('texture.top')?.errors" class="invalid-feedback">
+            <div
+              *ngIf="
+                editModelForm.get('texture.top')?.errors?.required ||
+                editModelForm.get('texture.top')?.errors?.minlength
+              ">
+              Top is required and must be at least 1 number
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group mb-2">
+          <label for="bottom" class="form-label">Bottom</label>
+          <input
+            class="form-control"
+            type="text"
+            formControlName="bottom"
+            id="bottom"
+            [ngClass]="{
+              'is-invalid': editModelForm.get('texture.bottom')?.status !== 'VALID',
+              'is-valid': editModelForm.get('texture.bottom')?.status === 'VALID',
+            }" />
+          <div *ngIf="editModelForm.get('texture.bottom')?.errors" class="invalid-feedback">
+            <div
+              *ngIf="
+                editModelForm.get('texture.bottom')?.errors?.required ||
+                editModelForm.get('texture.bottom')?.errors?.minlength
+              ">
+              Bottom is required and must be at least 2 characters
+            </div>
           </div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <div class="d-grid gap-2 d-md-block mx-auto">
+        <div class="d-grid gap-3 d-md-block mx-auto">
           <button
             type="button"
             [disabled]="!(editModelForm.valid && editModelForm.touched)"
@@ -245,11 +250,9 @@
             autocomplete="off"
             aria-pressed="true"
             (click)="submitForm()"
-            tooltip="Update device."
-          >
+            tooltip="Update device.">
             <i class="bi bi-floppy"></i> Update
           </button>
-
           <button
             type="button"
             class="btn btn-success gap-2"
@@ -257,8 +260,7 @@
             autocomplete="off"
             aria-pressed="true"
             (click)="deleteForm()"
-            tooltip="Delete device."
-          >
+            tooltip="Delete device.">
             <i class="bi bi-file-earmark-minus"></i> Delete
           </button>
         </div>
