Refactor project to use '3D' instead of 'Cube': Update project to use '3D' instead of 'Cube' in Angular components, URLs, and routing to better align with project focus on 3D inventory visualization. (#123)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,8 @@
             ariaCurrentWhenActive="page"
             >3d inventory</a
           >
-          <a class="nav-link" routerLink="/cube" routerLinkActive="active fluffy" ariaCurrentWhenActive="page"
-            ><i class="bi bi-box"></i> Cube</a
+          <a class="nav-link" routerLink="/3d" routerLinkActive="active fluffy" ariaCurrentWhenActive="page"
+            ><i class="bi bi-box"></i> 3d</a
           >
           <a class="nav-link" routerLink="/floor-list" routerLinkActive="active" ariaCurrentWhenActive="page"
             ><i class="bi bi-building"></i> Floors</a
