Refactor README.md and code files
This commit refactors the README.md file, code files, and package.json. It updates the structure and formatting of the README.md file, modifies the package.json file to update the version number, and makes changes to various code files. The changes involve organizing and rearranging sections, correcting typos, adding comments and annotations, and adjusting positions and sizes of elements in the 3D component. The changes aim to improve readability, maintainability, and user experience. No functional changes or new features are introduced.

--- a/src/app/components/connection/edit-connection/edit-connection.component.html
+++ b/src/app/components/connection/edit-connection/edit-connection.component.html
@@ -52,11 +52,9 @@
               {{ deviceFromObj.name }}
             </option>
           </select>
+          <div class="fs-7 fw-lighter">{{ this.form.value.deviceIdFrom }}</div>
           <div *ngIf="this.form.controls.deviceIdFrom.errors" class="invalid-feedback">
             <div *ngIf="this.form.controls.deviceIdFrom.errors.required">attributeDictionaryId is required</div>
-          </div>
-          <div class="log-message">
-            {{ this.toString(this.form.controls.deviceIdFrom.value) }}
           </div>
         </div>
       </div>
@@ -79,11 +77,9 @@
               {{ deviceToObj.name }}
             </option>
           </select>
+          <div class="fs-7 fw-lighter">{{ this.form.value.deviceIdTo }}</div>
           <div *ngIf="this.form.controls.deviceIdTo.errors" class="invalid-feedback">
             <div *ngIf="this.form.controls.deviceIdTo.errors.required">attributeDictionaryId is required</div>
-          </div>
-          <div class="log-message">
-            {{ this.toString(this.form.controls.deviceIdTo.value) }}
           </div>
         </div>
       </div>
