--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>3d inventory</title>
     <base href="/" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
 
   <body class="d-grid">
